# insertion_model

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/insertion_model/: chr1_SRR12322252.py  chr1_exp1_bat1_SRR12330758.py  chr1_exp1_bat2_SRR12330759.py  chr1_exp2_bat1_SRR12322252.py  chr1_exp2_bat1_SRR12322265.py  chr1_exp2_bat1_SRR12330760.py  chr1_exp2_bat2_SRR12322274.py  chr1_exp2_bat2_SRR12322278.py  chr1_exp2_bat2_SRR12330761.py  run.py
